tests/negative/Internal/Positivity/FreeT.juvix
module FreeT;

type Free (f : Type -> Type) (A : Type) : Type :=
  | Leaf : A -> Free f A
  | Branch : f (Free f A) -> Free f A;
